--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -10,6 +10,10 @@
 
 	<link rel="stylesheet" type="text/css" href="./style.css">
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@700&family=Audiowide&display=swap" rel="stylesheet">
+
 	<title>XVIII International Young Researchers Workshop in Geometry, Dynamics and Field theory</title>
 </head>
 
