--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -146,6 +146,13 @@
       <td>Loughborough University</td>
       <td>United Kingdom</td>
     </tr>
+    <tr>
+      <th scope="row">12</th>
+      <td>Tymon</td>
+      <td>Frelik</td>
+      <td>Faculty of Physics, University of Warsaw</td>
+      <td>Poland</td>
+    </tr>
   </tbody>
 </table>
 
