--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -114,19 +114,22 @@
 	<h3>Financial support</h3>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm m-2">
-				<img src="img/idub.svg" class="img-fluid" alt="...">
+			<div class="col-sm-7 m-2">
+				<img src="img/fundacjia.png" class="img-fluid" alt="...">
 			</div>
-			<div class="col-sm m-2">
+			<div class="col-sm-2 m-2">
 				<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
 			</div>
-			<div class="col-sm m-2">
-				<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
+			<div class="col-sm-2 m-2">
+				<img src="img/idub.svg" class="img-fluid" alt="...">
 			</div>
 		</div>
-		<div class="row text-center">
-			<div class="col-sm m-2">
+		<div class="row">
+			<div class="col-sm-8 m-2">
 				<img src="img/gmc.png" class="img-fluid" alt="...">
+			</div>
+			<div class="col-sm-3 m-2">
+				<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
 			</div>
 		</div>
 	</div>
