--- a/gamma/index.html
+++ b/gamma/index.html
@@ -103,6 +103,22 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading21">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse21" aria-expanded="false" aria-controls="collapse21">
+								<h5>The <em>k</em>-symplectic formulation of classical field theories
+								<br>
+								Xavier Rivas &#8213; 23/11/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse21" class="accordion-collapse collapse" aria-labelledby="heading21" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">Over the last 50 years, fiber bundles have slowly but surely claimed their title as the optimal language for discussing field theories. However, many fundamental notions used in contemporary field theory stem from the work of Charles Ehresmann in the 1930s and 40s. Among them are jet bundles, a powerful construction allowing for an elegant generalization of the tangent space of a manifold. Jets describe equivalence classes of sections of a fiber bundle, extending the concept beyond one-parameter curves, typical for classical mechanics. My talk aims to introduce jet bundles and emphasize their extraordinary relationship with Ehresmann connections.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/D4YnH3QNKac' target="_blank">Tymon Frelik --- An introduction to jet bundles</a>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading20">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse20" aria-expanded="false" aria-controls="collapse20">
 								<h5>An introduction to jet bundles
@@ -114,7 +130,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">Over the last 50 years, fiber bundles have slowly but surely claimed their title as the optimal language for discussing field theories. However, many fundamental notions used in contemporary field theory stem from the work of Charles Ehresmann in the 1930s and 40s. Among them are jet bundles, a powerful construction allowing for an elegant generalization of the tangent space of a manifold. Jets describe equivalence classes of sections of a fiber bundle, extending the concept beyond one-parameter curves, typical for classical mechanics. My talk aims to introduce jet bundles and emphasize their extraordinary relationship with Ehresmann connections.</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/WSvhWdcU-mQ' target="_blank">Adam Maskalaniec --- Introduction to category theory II</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/D4YnH3QNKac' target="_blank">Tymon Frelik --- An introduction to jet bundles</a>
 							</div>
 						</div>
 					</div>
