--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -153,6 +153,13 @@
       <td>Faculty of Physics, University of Warsaw</td>
       <td>Poland</td>
     </tr>
+    <tr>
+      <th scope="row">13</th>
+      <td>Tomasz</td>
+      <td>Sobczak</td>
+      <td>Wydział Fizyki UW</td>
+      <td>Poland</td>
+    </tr>
   </tbody>
 </table>
 
