--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -160,6 +160,18 @@
       <td>Wydział Fizyki UW</td>
       <td>Poland</td>
     </tr>
+      <th scope="row">14</th>
+      <td>Markus</td>
+      <td>Schlarb</td>
+      <td>Julius-Maximilians-Universität Würzburg</td>
+      <td>Germany</td>
+    </tr>
+      <th scope="row">15</th>
+      <td>Mariana</td>
+      <td>Costa Villegas</td>
+      <td>University of Padova</td>
+      <td>Italy</td>
+    </tr>
   </tbody>
 </table>
 
