--- a/gamma/index.html
+++ b/gamma/index.html
@@ -113,8 +113,9 @@
 						<div id="collapse21" class="accordion-collapse collapse" aria-labelledby="heading21" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">Classical field theories can be formalized geometrically through k-symplectic geometry. In this presentation, I will introduce the fundamentals of k-vector fields, integral sections, and k-symplectic geometry. This geometric framework will enable us to provide a geometric description for both Hamiltonian and Lagrangian field theories. The talk will include the discussion of relevant examples, such as the wave equation and Maxwell's equations for electromagnetism.</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/D4YnH3QNKac' target="_blank">Tymon Frelik --- An introduction to jet bundles</a> -->
+								<p class="text-justify">Classical field theories can be formalized geometrically through <em>k</em>-symplectic geometry. In this presentation, I will introduce the fundamentals of <em>k</em>-vector fields, integral sections, and <em>k</em>-symplectic geometry. This geometric framework will enable us to provide a geometric description for both Hamiltonian and Lagrangian field theories. The talk will include the discussion of relevant examples, such as the wave equation and Maxwell's equations for electromagnetism.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/nMQOvLSnRrg' target="_blank">Xavier Rivas --- The <em>k</em>-symplectic formulation of classical field theories
+</a>
 							</div>
 						</div>
 					</div>
