--- a/papers/index.html
+++ b/papers/index.html
@@ -33,6 +33,8 @@
 
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2311.15035" target="_blank">2311.15035</a></li>
+
 					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2307.06232" target="_blank">2307.06232</a></li>
 
 					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
