--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 				<h5>Collaborators:</h5>
 				<p>Some of the colleagues I have collaborated with are:</p>
 				<ul class="ms-4">
+					<li><a href="https://sites.google.com/view/leonardojcolombo/home" target="_blank">Leonardo Colombo</a></li>
 					<li><a href="https://www.icmat.es/mdeleon" target="_blank">Manuel de León</a></li>
 					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a></li>
 					<li><a href="https://www.unir.net/profesores/jordi-gaset-rifa/" target="_blank">Jordi Gaset</a></li>
