--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -160,16 +160,32 @@
       <td>Wydział Fizyki UW</td>
       <td>Poland</td>
     </tr>
+    <tr>
       <th scope="row">14</th>
       <td>Markus</td>
       <td>Schlarb</td>
       <td>Julius-Maximilians-Universität Würzburg</td>
       <td>Germany</td>
     </tr>
+    <tr>
       <th scope="row">15</th>
       <td>Mariana</td>
       <td>Costa Villegas</td>
       <td>University of Padova</td>
+      <td>Italy</td>
+    </tr>
+    <tr>
+      <th scope="row">16</th>
+      <td>Jacob</td>
+      <td>Goodman</td>
+      <td>Antonio de Nebrija University</td>
+      <td>Spain</td>
+    </tr>
+    <tr>
+      <th scope="row">17</th>
+      <td>Damiano</td>
+      <td>Rigo</td>
+      <td>University of Verona</td>
       <td>Italy</td>
     </tr>
   </tbody>
