--- a/gamma/index.html
+++ b/gamma/index.html
@@ -23,6 +23,14 @@
 
 			gtag('config', 'G-RG1PTVSHCG');
 		</script>
+		<style>
+			ol.references { counter-reset: list; }
+			ol.references > li { list-style: none; }
+			ol.references > li:before {
+				content: "[" counter(list) "] ";
+				counter-increment: list;
+			}
+		</style>
 	</head>
 	<body>
 
@@ -103,6 +111,29 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading22">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse22" aria-expanded="false" aria-controls="collapse22">
+								<h5><em>k</em>-symplectic Lie systems: theory and applications
+								<br>
+								Javier de Lucas &#8213; 30/11/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse22" class="accordion-collapse collapse" aria-labelledby="heading22" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">The main aim of this talk is to show that <em>k</em>-symplectic structures can naturally be employed to investigate ordinary differential equations instead of field theories. This leads to endow <em>k</em>-symplectic structures with new geometric useful constructions and to recover notions that were previously ignored because they are not appropriate for field theories.</p>
+								<p class="text-justify">To illustrate the above claims, I will first survey <em>k</em>-symplectic structures and Lie systems, namely systems of ordinary differential equations whose general solutions can be described as a function, the superposition rule, of a family of particular solutions and some constants. Lie systems are equivalent to curves in a finite-dimensional Lie algebra of vector fields. In the so-called <em>k</em>-symplectic Lie systems [1], the Lie algebra can be chosen to consist of Hamiltonian vector fields with respect to a <em>k</em>-symplectic structure. This suggests us to endow <em>k</em>-symplectic structures with a Lie algebra of admissible functions and several related Poisson algebras. These Lie algebras give rise, through a Poisson-coalgebra approach, to methods to derive geometrically superposition rules for <em>k</em>-symplectic Lie systems. Our theory will be illustrated with examples from control theory, physics and mathematics [1, 2].</p>
+								<p class="text-justify">References:
+								<ol class="references">
+									<li>J. de Lucas and S. Vilarino. <em>k</em>-symplectic Lie systems: theory and appli- cations, <em>J. Differential Equations</em> <strong>258</strong> (6) (2015) 2221–2255.</li>
+									<li>J. de Lucas, M. Tobolski and S. Vilariño. A new application of <em>k</em>-symplectic Lie systems, <em>Int. J. Geom. Methods Mod. Phys.</em> (2015) 1550071.</li>
+								</ol>
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/nMQOvLSnRrg' target="_blank">Xavier Rivas --- The <em>k</em>-symplectic formulation of classical field theories</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading21">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse21" aria-expanded="false" aria-controls="collapse21">
 								<h5>The <em>k</em>-symplectic formulation of classical field theories
@@ -114,8 +145,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">Classical field theories can be formalized geometrically through <em>k</em>-symplectic geometry. In this presentation, I will introduce the fundamentals of <em>k</em>-vector fields, integral sections, and <em>k</em>-symplectic geometry. This geometric framework will enable us to provide a geometric description for both Hamiltonian and Lagrangian field theories. The talk will include the discussion of relevant examples, such as the wave equation and Maxwell's equations for electromagnetism.</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/nMQOvLSnRrg' target="_blank">Xavier Rivas --- The <em>k</em>-symplectic formulation of classical field theories
-</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/nMQOvLSnRrg' target="_blank">Xavier Rivas --- The <em>k</em>-symplectic formulation of classical field theories</a>
 							</div>
 						</div>
 					</div>
@@ -178,7 +208,7 @@
 						<div id="collapse17" class="accordion-collapse collapse" aria-labelledby="heading17" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
+								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and <em>k</em>-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/hVdJOSmNjxo' target="_blank">Javier de Lucas --- Introduction to Lie Systems with Compatible Geometric Structures III</a>
 							</div>
 						</div>
@@ -194,7 +224,7 @@
 						<div id="collapse16" class="accordion-collapse collapse" aria-labelledby="heading16" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
+								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and <em>k</em>-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/5ncwtC3JW_8' target="_blank">Javier de Lucas --- Introduction to Lie Systems with Compatible Geometric Structures II</a>
 							</div>
 						</div>
@@ -210,7 +240,7 @@
 						<div id="collapse15" class="accordion-collapse collapse" aria-labelledby="heading15" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
+								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and <em>k</em>-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/qdHl1FhIXMw' target="_blank">Javier de Lucas --- Introduction to Lie Systems with Compatible Geometric Structures I</a>
 							</div>
 						</div>
