--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -188,6 +188,20 @@
       <td>University of Verona</td>
       <td>Italy</td>
     </tr>
+    <tr>
+      <th scope="row">18</th>
+      <td>Pablo</td>
+      <td>Nicolás</td>
+      <td>Universitat Politècnica de Catalunya</td>
+      <td>Spain</td>
+    </tr>
+    <tr>
+      <th scope="row">19</th>
+      <td>Federico</td>
+      <td>Vesentini</td>
+      <td>University of Verona</td>
+      <td>Italy</td>
+    </tr>
   </tbody>
 </table>
 
