--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -202,6 +202,13 @@
       <td>University of Verona</td>
       <td>Italy</td>
     </tr>
+    <tr>
+      <th scope="row">20</th>
+      <td>Rubén</td>
+      <td>Izquierdo</td>
+      <td>Universidad Complutense de Madrid - ICMAT</td>
+      <td>Spain</td>
+    </tr>
   </tbody>
 </table>
 
