--- a/gamma/index.html
+++ b/gamma/index.html
@@ -129,7 +129,7 @@
 									<li>J. de Lucas, M. Tobolski and S. Vilariño. A new application of <em>k</em>-symplectic Lie systems, <em>Int. J. Geom. Methods Mod. Phys.</em> (2015) 1550071.</li>
 								</ol>
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/nMQOvLSnRrg' target="_blank">Xavier Rivas --- The <em>k</em>-symplectic formulation of classical field theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/92iD1ftD3ws' target="_blank">Javier de Lucas --- k-symplectic Lie systems: theory and applications</a>
 							</div>
 						</div>
 					</div>
