--- a/gamma/index.html
+++ b/gamma/index.html
@@ -111,6 +111,24 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading23">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse23" aria-expanded="false" aria-controls="collapse23">
+								<h5>An introduction to Kirillov structures
+								<br>
+								Bartosz M. Zawora &#8213; 07/12/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse23" class="accordion-collapse collapse" aria-labelledby="heading23" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								A Kirillov structure on a real line bundle \(L\) refers to a Lie algebra structure \([\cdot,\cdot]\) on the space of sections of the dual bundle, \(\Gamma(L^*)\), where, for a fixed section \(h\in\Gamma(L^*)\), the operator \([\cdot,h]\) is a derivation. I will begin my talk by reviewing the concept of a real linear bundle. Then, I will recall the definitions of contact, Poisson, and Jacobi structures, providing some illustrative examples. Additionally, I will demonstrate how Kirillov structures can be derived from these structures and comment on the triviality of a real line bundle. If time permits, I will introduce scaling symmetries for dynamical systems and present the example of the 2D harmonic oscillator.
+								</p>
+								<!--<strong>Link to the video: </strong><a href='https://youtu.be/92iD1ftD3ws' target="_blank">Javier de Lucas --- k-symplectic Lie systems: theory and applications</a>-->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading22">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse22" aria-expanded="false" aria-controls="collapse22">
 								<h5><em>k</em>-symplectic Lie systems: theory and applications
@@ -486,6 +504,9 @@
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 	</body>
 </html>
