--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -209,6 +209,20 @@
       <td>Universidad Complutense de Madrid - ICMAT</td>
       <td>Spain</td>
     </tr>
+    <tr>
+      <th scope="row">21</th>
+      <td>Maksymilian</td>
+      <td>Bartosik</td>
+      <td>University of Lodz, Faculty of Physics and Applied Informatics</td>
+      <td>Poland</td>
+    </tr>
+    <tr>
+      <th scope="row">22</th>
+      <td>Krystian</td>
+      <td>Bartczak</td>
+      <td>University of Łódź, Faculty of Physics and Applied Informatics</td>
+      <td>Poland</td>
+    </tr>
   </tbody>
 </table>
 
