--- a/gamma/index.html
+++ b/gamma/index.html
@@ -124,7 +124,7 @@
 								<p class="text-justify">
   								A Kirillov structure on a real line bundle \(L\) refers to a Lie algebra structure \([\cdot,\cdot]\) on the space of sections of the dual bundle, \(\Gamma(L^*)\), where, for a fixed section \(h\in\Gamma(L^*)\), the operator \([\cdot,h]\) is a derivation. I will begin my talk by reviewing the concept of a real linear bundle. Then, I will recall the definitions of contact, Poisson, and Jacobi structures, providing some illustrative examples. Additionally, I will demonstrate how Kirillov structures can be derived from these structures and comment on the triviality of a real line bundle. If time permits, I will introduce scaling symmetries for dynamical systems and present the example of the 2D harmonic oscillator.
 								</p>
-								<!--<strong>Link to the video: </strong><a href='https://youtu.be/92iD1ftD3ws' target="_blank">Javier de Lucas --- k-symplectic Lie systems: theory and applications</a>-->
+								<strong>Link to the video: </strong><a href='https://youtu.be/QpRq9kYbBsE' target="_blank">Bartosz M. Zawora --- An introduction to Kirillov structures</a>
 							</div>
 						</div>
 					</div>
