--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -73,7 +73,7 @@
       <th scope="row">1</th>
       <td>Javier</td>
       <td>de Lucas</td>
-      <td>Uniwersytet Warszawski</td>
+      <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
@@ -87,28 +87,28 @@
       <th scope="row">3</th>
       <td>Bartosz</td>
       <td>Zawora</td>
-      <td>Uniwersytet Warszawski</td>
+      <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
       <th scope="row">4</th>
       <td>Julia</td>
       <td>Lange</td>
-      <td>Uniwersytet Warszawski</td>
+      <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
       <th scope="row">5</th>
       <td>Adam</td>
       <td>Maskalaniec</td>
-      <td>Uniwersytet Warszawski</td>
+      <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
       <th scope="row">6</th>
       <td>Leonardo</td>
       <td>Colombo</td>
-      <td>Centre for automation and robotics</td>
+      <td>Centre for automation and robotics CSIC-UPM</td>
       <td>Spain</td>
     </tr>
     <tr>
@@ -222,6 +222,13 @@
       <td>Bartczak</td>
       <td>University of Łódź, Faculty of Physics and Applied Informatics</td>
       <td>Poland</td>
+    </tr>
+    <tr>
+      <th scope="row">23</th>
+      <td>Samuel</td>
+      <td>Luque Astorga</td>
+      <td>Universidad Complutense de Madrid</td>
+      <td>Spain</td>
     </tr>
   </tbody>
 </table>
