--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 					<li><a href="https://www.unir.net/profesores/jordi-gaset-rifa/" target="_blank">Jordi Gaset</a></li>
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
 					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
+					<li>Julia Lange</li>
 					<li><a href="https://alopezgordon.xyz/" target="_blank">Asier López-Gordón</a></li>
 					<li>Arnau Mas</li>
 					<li>Miguel C. Muñoz-Lecanda</li>
