--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -112,19 +112,22 @@
         <th scope="row" class="align-middle">12:30 - 13:00</th>
         <td class="align-middle table-warning">Short talk</td>
         <td class="align-middle table-warning">Short talk</td>
-        <td class="align-middle table-light">Closing</td>
+        <td class="align-middle table-warning">Short talk</td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">13:00 - 13:30</th>
-        <td rowspan="3" class="align-middle table-light">Lunch</td>
-        <td rowspan="3" class="align-middle table-light">Lunch</td>
-        <td rowspan="15" class="align-middle"></td>
+        <td rowspan="2" class="align-middle table-light">Lunch</td>
+        <td rowspan="2" class="align-middle table-light">Lunch</td>
+        <td class="align-middle table-light">Closing</td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">13:30 - 14:00</th>
+        <td rowspan="14" class="align-middle"></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:00 - 14:30</th>
+        <td class="align-middle table-warning">Short talk</td>
+        <td class="align-middle table-warning">Short talk</td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:30 - 15:00</th>
