--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -230,6 +230,13 @@
       <td>Universidad Complutense de Madrid</td>
       <td>Spain</td>
     </tr>
+    <tr>
+      <th scope="row">24</th>
+      <td>Óscar</td>
+      <td>Carballal</td>
+      <td>Universidad Complutense de Madrid</td>
+      <td>Spain</td>
+    </tr>
   </tbody>
 </table>
 
