--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -237,6 +237,20 @@
       <td>Universidad Complutense de Madrid</td>
       <td>Spain</td>
     </tr>
+    <tr>
+      <th scope="row">25</th>
+      <td>Karolina</td>
+      <td>Wojciechowicz</td>
+      <td>University of Białystok</td>
+      <td>Poland</td>
+    </tr>
+    <tr>
+      <th scope="row">26</th>
+      <td>Elwira</td>
+      <td>Wawreniuk</td>
+      <td>University of Białystok</td>
+      <td>Poland</td>
+    </tr>
   </tbody>
 </table>
 
