--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -61,6 +61,7 @@
 
 <div class="container mt-3">
 	<p class="lead">The 18th Young Researchers Workshop in Geometry, Dynamics and Field Theory is a yearly event to promote young researchers in the field of differential geometry and its relations to dynamics and field theory. The 18th edition will take place in the University of Warsaw. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants, and a poster session.</p>
+	<p class="lead">You can download the poster of the conference <a href="./img/poster.pdf" target="_blank">here</a>.</p>
 
 	<h3>Location and dates:</h3>
 	<ul>
