--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -251,6 +251,13 @@
       <td>University of Białystok</td>
       <td>Poland</td>
     </tr>
+    <tr>
+      <th scope="row">27</th>
+      <td>Qianqian</td>
+      <td>Xia</td>
+      <td>Nanjing University of Information Science and Technology</td>
+      <td>China</td>
+    </tr>
   </tbody>
 </table>
 
