--- a/gamma/index.html
+++ b/gamma/index.html
@@ -113,6 +113,24 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading24">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse24" aria-expanded="false" aria-controls="collapse24">
+								<h5>Singularities and symmetries on the crossroads of geometry and physics
+								<br>
+								Pau Mir &#8213; 21/12/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse24" class="accordion-collapse collapse" aria-labelledby="heading24" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								In the thesis we study several mathematical objects that are essential to formulate and model physical systems. Applying the tools provided by differential geometry, we develop and analyze different mathematical structures that are used in three physical contexts: dissipative dynamics, integrable systems and geometric quantization. To do it, we mainly employ the setting of b-symplectic geometry, a natural extension of symplectic geometry which is specifically designed to address manifolds with boundary.
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C4SejlO7EBs' target="_blank">Bartosz M. Zawora --- Kirillov structures and scaling symmetries</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading24">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse24" aria-expanded="false" aria-controls="collapse24">
 								<h5>Kirillov structures and scaling symmetries
 								<br>
 								Bartosz M. Zawora &#8213; 14/12/2023, 21:00</h5>
@@ -124,7 +142,7 @@
 								<p class="text-justify">
   								The aim of the talk is to introduce the scaling symmetries for Hamiltonian systems associated with Kirillov structures. I will begin by revisiting the definition of a Kirillov structure and recalling the notions of \(\mathbb{R}^\times\)-principal line bundle \(M\) and its associated line bundle \(L\). Then, to show how Kirillov structure generalises contact manifolds, I will present theorems establishing a one-to-one correspondence between sections \(h\in \Gamma(L^*)\) and one-homogeneous functions \(H\in C^\infty(M)\). Next, I will introduce a scaling symmetry for a dynamical system on a symplectic manifold that is a triple \((S,\omega, H)\), where \(\omega\) is a one-homogeneous symplectic form on a manifold \(S\) and one-homogeneous Hamiltonian function \(H\in C^\infty(S)\). Finally, I will present a reduction by scaling symmetries on an illustrative example of the 2D harmonic oscillator.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/QpRq9kYbBsE' target="_blank">Bartosz M. Zawora --- An introduction to Kirillov structures</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/C4SejlO7EBs' target="_blank">Bartosz M. Zawora --- Kirillov structures and scaling symmetries</a>
 							</div>
 						</div>
 					</div>
