--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'>J. de Lucas, J. Lange and X. Rivas, "A symplectic approach to Schrödinger equations in the infinite-dimensional unbounded setting". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2312.09192 " target="_blank">2312.09192 </a></li>
+
 					<li class='mb-2'>L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2311.15035" target="_blank">2311.15035</a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2307.06232" target="_blank">2307.06232</a></li>
