--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -258,6 +258,13 @@
       <td>Nanjing University of Information Science and Technology</td>
       <td>China</td>
     </tr>
+    <tr>
+      <th scope="row">28</th>
+      <td>Jagna</td>
+      <td>Wiśniewska</td>
+      <td>Universitat Politècnica de Catalunya</td>
+      <td>Spain</td>
+    </tr>
   </tbody>
 </table>
 
