--- a/18ywgmc/registration/index.html
+++ b/18ywgmc/registration/index.html
@@ -61,10 +61,10 @@
   <h4>Important dates</h4>
   <ul>
     <li><p><strong>Deadline for registration:</strong> January 15, 2024. <a href="https://forms.gle/QmSoPQWN47HE7jCr9" target="_blank">Click here to register</a>.</p>
-    <p>The registration fee is 40€. A few days after registering for the conferente, you will receive an e-mail with further information on how to proceed with the payment, including where to send the information for an invoice in case you need it (remember to check the spam folder).</p>
+    <p>The registration fee is 40€. A few days after registering for the conference, you will receive an e-mail with further information on how to proceed with the payment, including where to send the information for an invoice in case you need it (remember to check the spam folder).</p>
     <li><p><strong>Deadline to apply for a scholarship:</strong> December 15, 2023.</p></li>
     <p>If you want to apply for a scholarship to cover the costs of the travel/accomodation, send an email to <a href="mailto:18ywgmc@gmail.com">18ywgmc(at)gmail.com</a> after registering, attaching your CV.</p></li>
-    <li><p><strong>Deadline for submitting abstracs for talks and posters:</strong> December 15, 2023.</p>
+    <li><p><strong>Deadline for submitting abstracs for talks and posters:</strong> December 31, 2023.</p>
     <p>Send your title and abstract to <a href="mailto:18ywgmc@gmail.com">18ywgmc(at)gmail.com</a> after registering. Only a limited number of short talks will be accepted. The scientific committee will select them after the deadline date.</p></li>
   </ul>
 
