--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -265,6 +265,13 @@
       <td>Universitat Politècnica de Catalunya</td>
       <td>Spain</td>
     </tr>
+    <tr>
+      <th scope="row">29</th>
+      <td>Jan</td>
+      <td>Cieśliński</td>
+      <td>University of Bialystok, Faculty of Physics</td>
+      <td>Poland</td>
+    </tr>
   </tbody>
 </table>
 
