--- a/18ywgmc/registration/index.html
+++ b/18ywgmc/registration/index.html
@@ -68,6 +68,8 @@
     <p>Send your title and abstract to <a href="mailto:18ywgmc@gmail.com">18ywgmc(at)gmail.com</a> after registering. Only a limited number of short talks will be accepted. The scientific committee will select them after the deadline date.</p></li>
   </ul>
 
+  <p>In the event that the conference organizers manage transportation or lodging, the organizing committee will personally handle these aspects and abstain from employing the services of any travel agency. In case of doubt do not hesitate to contact us (<a href="mailto:18ywgmc@gmail.com">18ywgmc(at)gmail.com</a>).</p>
+
 </div>
 
 <div class="container-fluid footer mt-5 pt-3 pb-1">
