--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -272,6 +272,13 @@
       <td>University of Bialystok, Faculty of Physics</td>
       <td>Poland</td>
     </tr>
+    <tr>
+      <th scope="row">30</th>
+      <td>Arnoldo</td>
+      <td>Guerra IV</td>
+      <td>Universitat de Barcelona</td>
+      <td>Spain</td>
+    </tr>
   </tbody>
 </table>
 
