--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -279,6 +279,13 @@
       <td>Universitat de Barcelona</td>
       <td>Spain</td>
     </tr>
+    <tr>
+      <th scope="row">31</th>
+      <td>Dzianis</td>
+      <td>Zhalukevich</td>
+      <td>UWB</td>
+      <td>Belarus</td>
+    </tr>
   </tbody>
 </table>
 
